# roboptim-examples

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  quadraticFunction.cpp  testMatrix.cpp
