CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJECT_NAME test-roboptim)
SET(PROJECT_DESCRIPTION "Simple test for roboptim")
SET(PROJECT_URL "https://github.com/sovannara-hak/roboptim-examples")

SET(CMAKE_CXX_FLAGS "-fpermissive")

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(PC_EIGEN3 eigen3>=3.2 REQUIRED)
PKG_CHECK_MODULES(PC_LOG4CXX liblog4cxx REQUIRED)
PKG_CHECK_MODULES(PC_ROBOPTIM-CORE roboptim-core>=2.0 REQUIRED)
PKG_CHECK_MODULES(PC_ROBOPTIM-CORE-PLUGIN-IPOPT roboptim-core-plugin-ipopt REQUIRED)

IF(NOT PC_EIGEN3_FOUND)
    MESSAGE("Failed to find Eigen3.2")
ENDIF(NOT PC_EIGEN3_FOUND)

IF(NOT PC_LOG4CXX_FOUND)
    MESSAGE("Failed to find Liblog4cxx")
ENDIF(NOT PC_LOG4CXX_FOUND)

IF(NOT PC_ROBOPTIM-CORE_FOUND)
    MESSAGE("Failed to find Roboptim-core")
ENDIF(NOT PC_ROBOPTIM-CORE_FOUND)

FIND_PACKAGE( Boost 1.46 REQUIRED )

ADD_SUBDIRECTORY(src)
