INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

INCLUDE_DIRECTORIES(
    ${PC_EIGEN3_INCLUDE_DIRS}
    ${PC_LOG4CXX_INCLUDE_DIRS}
    ${PC_ROBOPTIM-CORE_INCLUDE_DIRS}
    ${PC_ROBOPTIM-CORE-PLUGIN-IPOPT_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
    ${PC_EIGEN3_LIBRARY_DIRS}
    ${PC_LOG4CXX_LIBRARY_DIRS}
    ${PC_ROBOPTIM-CORE_LIBRARY_DIRS}
    ${PC_ROBOPTIM-CORE-PLUGIN-IPOPT_LIBRARY_DIRS}
)

SET(QUAD_FUNC_SRC
    quadraticFunction.cpp
)

ADD_EXECUTABLE(
    QuadraticFunction
    ${QUAD_FUNC_SRC}
)

TARGET_LINK_LIBRARIES(
    QuadraticFunction
    ${PC_EIGEN3_LIBRARIES}
    ${PC_LOG4CXX_LIBRARIES}
    ${PC_ROBOPTIM-CORE_LIBRARIES}
    ${PC_ROBOPTIM-CORE-PLUGIN-IPOPT_LIBRARIES}
)

INSTALL(
    TARGETS QuadraticFunction
    DESTINATION bin
)
