INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

INCLUDE_DIRECTORIES(
    ${PC_EIGEN3_INCLUDE_DIRS}
    ${PC_LOG4CXX_INCLUDE_DIRS}
    ${PC_ROBOPTIM-CORE_INCLUDE_DIRS}
    ${PC_ROBOPTIM-CORE-PLUGIN-IPOPT_INCLUDE_DIRS}
    ${Boost_INCLUDE_DIR}
)

LINK_DIRECTORIES(
    ${PC_EIGEN3_LIBRARY_DIRS}
    ${PC_LOG4CXX_LIBRARY_DIRS}
    ${PC_ROBOPTIM-CORE_LIBRARY_DIRS}
    ${PC_ROBOPTIM-CORE-PLUGIN-IPOPT_LIBRARY_DIRS}
)

# Set plugin path of roboptim-core from the .pc file
EXECUTE_PROCESS(
    COMMAND "${PKG_CONFIG_EXECUTABLE}"
    "--variable=plugindir" "roboptim-core"
    OUTPUT_VARIABLE "PC_ROBOPTIM-CORE_PLUGINDIR"
    ERROR_QUIET
)
STRING(REPLACE "\n" "" "PC_ROBOPTIM-CORE_PLUGINDIR" "${PC_ROBOPTIM-CORE_PLUGINDIR}")

SET(QUAD_FUNC_SRC
    quadraticFunction.cpp
)

MACRO(BUILD_EXE src exec_name)
    ADD_EXECUTABLE(
        ${exec_name}
        ${${src}}
    )

    SET_TARGET_PROPERTIES(
        ${exec_name}
        PROPERTIES COMPILE_FLAGS
        "-DPLUGIN_PATH='\"${PC_ROBOPTIM-CORE_PLUGINDIR}\"'"
    )

    TARGET_LINK_LIBRARIES(
        ${exec_name}
        ${PC_EIGEN3_LIBRARIES}
        ${PC_LOG4CXX_LIBRARIES}
        ${PC_ROBOPTIM-CORE_LIBRARIES}
        ${PC_ROBOPTIM-CORE-PLUGIN-IPOPT_LIBRARIES}
        ${Boost_LIBRARIES}
    )

    INSTALL(
        TARGETS ${exec_name}
        DESTINATION bin
    )
ENDMACRO(BUILD_EXE)

BUILD_EXE(QUAD_FUNC_SRC QuadraticFunction)
